--- a/dox_theme/www/login.css
+++ b/dox_theme/www/login.css
@@ -41,7 +41,7 @@
 {% macro logo_section() %}
 <div class="page-card-head">
     <img class="app-logo" src="{{ logo }}">
-    <h4>{{ _("Welcome To EvoPulse ERP") }}</h4>
+    <h4>{{ _("EvoPulse ERP") }}</h4>
 </div>
 {% endmacro %}
 
